# invent-ory

./: .gitignore  CHANGELOG.md  README.md  release-please-config.json
.github/workflows/: build.yml  ci.yml  release-please.yml
backend/: .env.example  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
backend/config/: config.go
backend/database/: database.go
backend/handlers/: boxes.go  components.go  inventory.go  lcsc.go
backend/migrations/: 001_initial_schema.sql
backend/models/: box.go  component.go  inventory_item.go
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: BomControlPanel.tsx  BomEmptyState.tsx  BomFooter.tsx  BomHeader.tsx  BomOrderDialog.tsx  BomSearchDialog.tsx  BomSolderingSummaryDialog.tsx  BomTable.tsx  BoxCard.tsx  ComponentModal.tsx  Layout.tsx  Scanner.tsx  SettingsModal.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx  toast.tsx  toaster.tsx  use-toast.ts
frontend/src/pages/: BomPage.tsx  BoxesPage.tsx  InventoryPage.tsx  ScannerPage.tsx
frontend/src/services/: api.ts  lcsc.ts  settings.ts
frontend/src/types/: bom.ts  index.ts
