[package]
name = "invent-ory"
version = "0.1.0"
description = "PCB Component Inventory App"
authors = ["you"]
license = ""
repository = ""
default-run = "invent-ory"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
